初步完成布局